# Tarscribe

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  RELEASING.md  ROADMAP.md  SECURITY_AUDIT.md  SHARING.md
.github/: BRANCHING_STRATEGY.md  DEPENDENCY_REVIEW.md  dependabot.yml
.github/workflows/: ci.yml  dependency-security-review.yml  release.yml
backend/: pyproject.toml
backend/None/speechbrain/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
backend/tarscribe_backend/: __init__.py  __main__.py  agent.py  analysis.py  audio.py  audio_utils.py  audit.py  calendar_sync.py  config.py  db.py  documents.py  evidence.py  hardware.py  jobs.py  live_analysis.py  live_audio.py  llm.py  main.py  mcp_link.py  media_tools.py  models.py  overlay.py  performance_profiles.py  rag.py  schemas.py  security.py  settings_store.py  summary_pdf.py  threads.py  transcript_quality.py  transcript_view.py  upload_security.py  web_context.py  web_search.py  ws.py
backend/tarscribe_backend/mcp_server/: __init__.py  __main__.py  client.py  server.py
backend/tarscribe_backend/ml/: __init__.py  alignment.py  diarization.py  embedding.py  lifecycle.py  live_asr.py  live_diarization.py  model_status.py  speaker_matching.py
backend/tarscribe_backend/ml/asr/: __init__.py  base.py  factory.py  faster_whisper_backend.py  mlx_whisper_backend.py  parakeet_mlx_backend.py
backend/tarscribe_backend/routers/: chats.py  diarization.py  dictations.py  documents.py  editing.py  export.py  insights.py  jobs.py  live_recordings.py  llm.py  mcp.py  quality.py  rag.py  recordings.py  settings.py  speakers.py  system.py  templates.py  topics.py  transcription.py
backend/tests/: conftest.py  test_agent.py  test_alignment.py  test_api.py  test_asr.py  test_audit_log.py  test_auth.py  test_cors.py  test_delete_cascade.py  test_diarization.py  test_dictations.py  test_documents.py  test_hf_token_validation.py  test_insights.py  test_job_runner_async.py  test_journey_delete_topic.py  test_journey_rag_chat.py  test_journey_record_summarize.py  test_live_recordings.py  test_llm.py  test_mcp_server.py  test_media_tools.py  test_performance_profiles.py  test_quality_api.py  test_rag.py  test_settings_secrets.py  test_system_auth.py  test_transcript_quality.py  test_upload_security.py  test_web_search.py  test_ws_auth.py
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/public/: audioWorklet.js
desktop/scripts/: stage-resources.sh
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/icons/source/: render_pil.py
desktop/src-tauri/native/: system_audio_capture.mm
desktop/src-tauri/src/: autostart.rs  lib.rs  main.rs  mcp.rs  menu.rs  sidecar.rs  system_audio.rs
desktop/src/components/: ActionItemsPanel.tsx  AgentResearchIndicator.tsx  AudioPlayer.tsx  ChaptersBar.tsx  ChatPanel.tsx  DictationOverlay.tsx  DictationPanel.tsx  DocumentEditorModal.tsx  DocumentsPanel.tsx  EvidenceTrail.test.tsx  EvidenceTrail.tsx  FirstRunWizard.tsx  GlobalRecordingIndicator.tsx  JobsPage.tsx  LiveRecordingDetail.test.tsx  LiveRecordingDetail.tsx  LlmSettings.tsx  McpSettings.tsx  MeetingTimeline.test.tsx  MeetingTimeline.tsx  MemoryPage.tsx  MemorySectionNav.tsx  PeoplePage.test.tsx  PeoplePage.tsx  RagSettings.tsx  RecordControl.tsx  RecordingDetail.tsx  RecordingList.tsx  SettingsModal.tsx  SetupScreen.tsx  SpeakerStatsPanel.tsx  Splash.tsx  StartPage.test.tsx  StartPage.tsx  SummaryEditorModal.tsx  SummaryPanel.tsx  SummarySourcesPanel.test.tsx  SummarySourcesPanel.tsx  TasksPage.tsx  TemplatesModal.tsx  (+7 more)
desktop/src/components/chat-panel/: ChatComposer.tsx  ChatContextUsage.tsx  ChatFilters.tsx  ChatMarkdown.tsx  ChatModeView.tsx  ChatPanelParts.test.tsx  ChatToolbar.tsx  RagEvidenceTrail.tsx  SearchModeView.tsx  SourceAction.tsx  model.ts  useChatPanelController.ts
desktop/src/components/layout/: AppContent.tsx  LayoutProvider.tsx  MemoryNavigation.test.tsx  Sidebar.tsx  TopBar.tsx  TopicRow.tsx
desktop/src/components/llm-settings/: ConnectionEditor.tsx  ProfileConnection.tsx  ResearchChannelControls.test.tsx  ResearchChannelControls.tsx  model.test.ts  model.tsx
desktop/src/components/meeting-timeline/: model.test.ts  model.ts
desktop/src/components/memory/: model.test.ts  model.ts
desktop/src/components/recording-detail/: AskWorkspace.tsx  CorrectionEditor.tsx  DetailTabs.tsx  (+16 more)
desktop/src/hooks/: finalTranscriptionPolling.test.ts  finalTranscriptionPolling.ts  queries.ts  useAppBootstrap.ts  useAppSettingsBootstrap.ts  useDictation.ts  useJobs.test.ts  useJobs.ts  useLiveRecording.ts  useNativeAppEvents.ts  useRecording.tsx  useUndoableDelete.ts
desktop/src/lib/: api.test.ts  api.ts  formValidation.test.ts  formValidation.ts  format.ts  livePcmCapture.ts  menuAutoClose.test.ts  menuAutoClose.ts  nativeSystemAudioRecorder.ts  openExternalUrl.test.ts  openExternalUrl.ts  performanceProfiles.ts  recorder.ts  tauri.ts  types.ts  updater.ts
docs/: FEATURE_IDEAS.md  LIVE_TRANSCRIPTION_PLAN.md  VISUAL_REDESIGN_PLAN.md
scripts/: build-dmg.sh  install.command
(+14 files in other folders)
