[project]
name = "tarscribe-backend"
version = "0.1.11"
description = "Local transcription & diarization backend for the Tarscribe desktop app"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.139.0,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlmodel>=0.0.39",
    "pydantic-settings>=2.14.2,<3",
    "python-multipart>=0.0.32",
    "httpx>=0.27,<1",
    "numpy>=1.26",
    "platformdirs>=4.3",
    "keyring>=25.0,<26",
    "soundfile>=0.14.0",
    "sqlite-vec>=0.1.9",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "mcp>=1.28.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavy ML deps. On macOS the app builds the env on first run with
# `pip install tarscribe-backend[asr-common,diarization,mac]`.
asr-common = [
    "faster-whisper>=1.1.0",
]
diarization = [
    "pyannote.audio>=4.0.7",
    "torch>=2.12.1",
    "torchaudio>=2.4",
    "speechbrain>=1.0",
]
mac = [
    "parakeet-mlx>=0.5.2",
    "mlx-whisper>=0.4.0",
]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.20",
]

[project.scripts]
tarscribe-backend = "tarscribe_backend.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tarscribe_backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
