[project]
name = "tarscribe-backend"
version = "0.1.11"
description = "Local transcription & diarization backend for the Tarscribe desktop app"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.49.0,<1",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6,<3",
    "python-multipart>=0.0.12",
    "httpx>=0.27,<1",
    "numpy>=1.26",
    "platformdirs>=4.3",
    "keyring>=25.0,<26",
    "soundfile>=0.12",
    "sqlite-vec>=0.1.9",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "mcp>=1.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavy ML deps. On macOS the app builds the env on first run with
# `pip install tarscribe-backend[asr-common,diarization,mac]`.
asr-common = [
    "faster-whisper>=1.1.0",
]
diarization = [
    "pyannote.audio>=3.3.2",
    "torch>=2.4",
    "torchaudio>=2.4",
    "speechbrain>=1.0",
]
mac = [
    "parakeet-mlx>=0.3.0",
    "mlx-whisper>=0.4.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[project.scripts]
tarscribe-backend = "tarscribe_backend.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tarscribe_backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
